--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta name="author" content="Ahitagni Das">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="images/rice-logo.png">
+    <link rel="shortcut icon" href="images/rice-logo.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     
 
