--- a/index.html
+++ b/index.html
@@ -65,5 +65,5 @@
       </tr>
     </table>
   </body>
-  <center>This website is a copy of Jon Barron's brilliant <a href="https://jonbarron.info">website.</a></center>
+  <center>One of many copies of Jon Barron's brilliant <a href="https://jonbarron.info">website.</a></center>
 </html>
