--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p class="name" style="text-align: center;">
                   Ahitagni Das
                 </p>
-                <p>I'm an undergrad at <a href="https://rice.edu/">Rice University</a>, where I study ECE and CS. I currently work as a researcher at the <a href="https://richb.rice.edu">Baraniuk Group</a>.
+                <p>I'm an undergrad at <a href="https://rice.edu/">Rice University</a>, where I study ECE and CS. I currently work as a researcher at the <a href="https://richb.rice.edu">DSP Group</a>.
                 </p>
                 <p>
                   Previously, I worked as a visiting research scentist at the <a href="https://www.media.mit.edu/groups/nano-cybernetic-biotrek/overview/">Nano Cybernetik Biotrek</a>, at the <a href="https://www.media.mit.edu">MIT Media Lab</a>, where I studied microbatteries for autnomous sub-100 micron colloidal robots under the supervision of <a href="https://web.mit.edu/deblina-sarkar/">Dr. Deblina Sarkar</a>. I have also worked on hexagonal Boron Nitride in sodium-ion batteries for EVs, and novel lithium-ion batteries from industrial waste at the <a href="https://ajayan.rice.edu">Ajayan Group</a> at Rice where I was advised by <a href="https://profiles.rice.edu/faculty/pulickel-ajayan">Dr. Pulickel Ajayan</a> and <a href="https://profiles.rice.edu/faculty/robert-vajtai">Dr. Robert Vajtai</a>. I also interned at the <a href="https://kraidongia.wixsite.com/my-site/about-3">Nanofludics Lab</a> at IIT Guwahati, where I was advised by <a href="https://www.iitg.ac.in/chem/page_faculty_profile.php?name=SG8zZEl0WDVod0dnNTg2VGduOEZDdz09">Dr. Kalyan Raidongia</a> on novel methods of harvesting energy from plastic waste. 
