--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Research</h2>
                 <p>
-                  My interests have since shifted from an experimental approach to fundamental materials and neuroscience, to a more application focused deep learning based approach. My current interests include nanoelectroincs in neuroscience, and the application of deep learning in physical sciences, such as in proteomics, neuroscience, and novel material discovery. 
+                  I am interested in Deep Learning Theory, and the application of Deep Learning in physical sciences, such as neuroscience and material discovery. I am currently working on using implicit neural representations to use reflective surfaces as 5D radiance field cameras, and in using Spline Theory to understand DL models. 
                 </p>
               </td>
             </tr>
