--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:ad158@rice.edu">Email</a> &nbsp;/&nbsp;
-                  <a href="data/CV_Ahitagni_Das.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="data/CV_Ahitagni_Das.pdf">Resumé</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=GLTc7LcAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
                   <a href="https://github.com/ahitagnied/">Github</a>
                 </p>
